Fixed login form not being aligned.

--- a/src/app/shared/login/login.component.css
+++ b/src/app/shared/login/login.component.css
@@ -29,16 +29,16 @@
 /* header/footer wrapper */
 
 #login {
-    width: 20%;
+    width: 25%;
     display: flex;
     flex-direction: column; 
     justify-content: center;
     align-items: center;
-
 }
 
 #usernameLabel {
-    margin-right: 20px;
+    margin-right: 1rem;
+    margin-left: 3.3rem;
 }
 
 #usernameInput {
@@ -46,16 +46,11 @@
 }
 
 #passwordLabel {
-    margin-right: 20px;
-    margin-left: 3px;
+    margin-right: 1rem;
 }
 
 #passwordInput {
     margin-bottom: 10px;
-}
-
-#usernameSection {
-    margin-left: 4rem;
 }
 
 #credentialsDialogButton {
